--- a/DealHack/index.html
+++ b/DealHack/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="text">
               <h2 class="text-uppercase">Free Shipping</h2>
-              <p></p>
+              <p>Customers will be able to receive their products without having to pay shipping fees.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
@@ -123,7 +123,7 @@
             </div>
             <div class="text">
               <h2 class="text-uppercase">Free Returns</h2>
-              <p></p>
+              <p>If the products are problematic, customers can freely return those products.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
@@ -132,7 +132,7 @@
             </div>
             <div class="text">
               <h2 class="text-uppercase">Customer Support</h2>
-              <p></p>
+              <p>DealHack is always ready to support customers, whether financial issues or transportation matters.</p>
             </div>
           </div>
         </div>
@@ -173,14 +173,33 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-            <h3 class="footer-heading mb-4"></h3>
+            <h3 class="footer-heading mb-4">Promo</h3>
             <a href="#" class="block-6">
               <img src="images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded mb-4">
               <h3 class="font-weight-light  mb-0">Finding Your Perfect Phones</h3>
               <p></p>
             </a>
           </div>
-
+          <div class="col-md-6 col-lg-3">
+            <div class="block-5 mb-5">
+              <h3 class="footer-heading mb-4">Contact Info</h3>
+              <ul class="list-unstyled">
+                <li class="address">MindX, 71 Nguyen Chi Thanh Street, Hanoi</li>
+                <li class="phone"><a href="tel://23923929210">(+84)968593764</a></li>
+                <li class="email">lehoangminh.ams@gmail.com</li>
+                <li class="email">prohungnguyenminh@gmail.com</li>
+              </ul>
+            </div>
+            <div class="block-7">
+              <form action="#" method="post">
+                <label for="email_subscribe" class="footer-heading">Subscribe</label>
+                <div class="form-group">
+                  <input type="text" class="form-control py-4" id="email_subscribe" placeholder="Email">
+                  <input type="submit" class="btn btn-sm btn-primary" value="Send">
+                </div>
+              </form>
+            </div>
+          </div>
           </div>
         </div>
       </div>
