Tạo 1 trang login riêng để thử

--- a/DealHack/login.html
+++ b/DealHack/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dealhack</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700"> 
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <!-- <link rel="stylesheet" href="fonts/icomoon/style.css">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
 
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/aos.css"> -->
 
     <link rel="stylesheet" href="firebase-functions/public/css/style.css">
     
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-    <div class = "size-wrap">
+    <!-- <div class = "size-wrap">
         <header class="site-navbar" role="banner">
             <div class="site-navbar-top">
               <div class="container">
@@ -74,22 +74,22 @@
                       </li>
                     </ul> -->
                   </li>
-                  <li>
-                    <a href="about.html">About</a>
+                  <!-- <li>
+                    <a href="about.html">About</a> -->
                     <!-- <ul class="dropdown">
                       <li><a href="#">Menu One</a></li>
                       <li><a href="#">Menu Two</a></li>
                       <li><a href="#">Menu Three</a></li>
                     </ul> -->
-                  </li>
-                  <li><a href="shop.html">Shop</a></li>
-           
+                  <!-- </li>
+                  <li><a href="shop.html">Shop</a></li> -->
+<!--            
                 </ul>
               </div>
             </nav>
           </header>
 
-    </div>
+    </div> -->
 
 
 
