add firebase script

--- a/DealHack/login.html
+++ b/DealHack/login.html
@@ -44,7 +44,67 @@
 
         </header>
 
+        <div>
+            <div>
+                <h2>Login</h2>
+                <form class = "login">
+                    <input type="text" name="email" placeholder="Email">
+                    <input type="password" name="password" placeholder="Password">
+                    <button>Login</button>
+                    <p class="error"></p>
+                </form>
+                <div>No account?<a class="switch">Register instead</a></div>
+
+            </div>
+
+            <div>
+                <h2>Register</h2>
+                <form class = "register">
+                    <input type="text" name="email" placeholder="Email">
+                    <input type="password" name="password" placeholder="Password">
+                    <button>Register</button>
+                    <p class="error"></p>
+                </form>
+                <div>Got an account?<a class="switch">Login instead</a></div>
+
+            </div>
+
+
+
+
+        </div>
+
   </div>
-    
+
+
+
+
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-functions.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyCsEmxdVdAEfvBdOshVfVbiuw698bmJRPM",
+        authDomain: "dealhack-c0303.firebaseapp.com",
+        databaseURL: "https://dealhack-c0303.firebaseio.com",
+        projectId: "dealhack-c0303",
+        storageBucket: "dealhack-c0303.appspot.com",
+        messagingSenderId: "655308914162",
+        appId: "1:655308914162:web:f9452eb44c07431b0d7f6b"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    </script>
+
+    <script src="firebase-functions/public/js/app.js"></script>
+    <script src="firebase-functions/public/js/auth.js"></script>
 </body>
 </html>
