Build thử trang login

--- a/DealHack/logindemo.html
+++ b/DealHack/logindemo.html
@@ -184,7 +184,8 @@
     firebase.initializeApp(firebaseConfig);
     </script>
 
-   
+    <script src="firebase-functions/public/js/app.js"></script>
+    <script src="firebase-functions/public/js/auth.js"></script>
 
 
 </body>
