--- a/DealHack/index.html
+++ b/DealHack/index.html
@@ -44,7 +44,7 @@
             <div class="col-6 col-md-4 order-3 order-md-3 text-right">
               <div class="site-top-icons">
                 <ul>
-                  <li><a href="login.html"><span class="icon icon-person"></span></a></li>
+                  <li class="icon_logo"><a href="login.html"><span class="icon icon-person"></span></a></li>
                   <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
                 
                   <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
@@ -97,7 +97,7 @@
             <div class="intro-text text-center text-md-left">
               <p class="mb-4"></p>
               <p>
-                <a href="#" class="btn btn-sm btn-primary">Shop Now</a>
+                <a href="shop.html" class="btn btn-sm btn-primary">Shop Now</a>
               </p>
             </div>
           </div>
@@ -215,6 +215,32 @@
   <script src="js/aos.js"></script>
 
   <script src="js/main.js"></script>
+
+
+      <!-- The core Firebase JS SDK is always required and must be listed first -->
+      <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-firestore.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-functions.js"></script>
+  
+      <!-- TODO: Add SDKs for Firebase products that you want to use
+          https://firebase.google.com/docs/web/setup#available-libraries -->
+  
+      <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+          apiKey: "AIzaSyCsEmxdVdAEfvBdOshVfVbiuw698bmJRPM",
+          authDomain: "dealhack-c0303.firebaseapp.com",
+          databaseURL: "https://dealhack-c0303.firebaseio.com",
+          projectId: "dealhack-c0303",
+          storageBucket: "dealhack-c0303.appspot.com",
+          messagingSenderId: "655308914162",
+          appId: "1:655308914162:web:f9452eb44c07431b0d7f6b"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      </script>
+      <script src="js/authen.js"></script>
     
   </body>
 </html>
