build xong trang login

--- a/DealHack/index.html
+++ b/DealHack/index.html
@@ -240,7 +240,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
       </script>
-      <script src="js/authen.js"></script>
+      <script src="js/index.js"></script>
     
   </body>
 </html>
