--- a/DealHack/login.html
+++ b/DealHack/login.html
@@ -41,7 +41,7 @@
                     <div class="login-container-form-btn">
                         <div class ="wrap-login-form-btn">
                             <div class="login-form-bgbtn"></div>
-                            <button class="login-form-btn">Login</button>
+                            <button class="login-form-btn" type="submit">Login</button>
                             <p class="error"></p>
                             
                         </div>
@@ -78,7 +78,7 @@
                     <div class="sign-up-container-form-btn">
                         <div class ="wrap-sign-up-form-btn">
                             <div class="sign-up-form-bgbtn"></div>
-                            <button class="sign-up-form-btn">Register</button>
+                            <button class="sign-up-form-btn" type="submit">Register</button>
                             <p class="error"></p>
                             
                         </div>
