Xong tính năng cơ bản cho shop

--- a/DealHack/index.html
+++ b/DealHack/index.html
@@ -45,6 +45,7 @@
               <div class="site-top-icons">
                 <ul>
                   <li class="icon_logo"><a href="login.html"><span class="icon icon-person"></span></a></li>
+                  <li id="sign_out_button"><button onclick="signOut()">Sign Out</button></li>
                   <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
                 
                   <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
