Chinh lai tinh nang login

--- a/DealHack/about.html
+++ b/DealHack/about.html
@@ -44,7 +44,8 @@
             <div class="col-6 col-md-4 order-3 order-md-3 text-right">
               <div class="site-top-icons">
                 <ul>
-                  <li><a href="#"><span class="icon icon-person"></span></a></li>
+                  <li class="icon_logo"><a href="login.html"><span class="icon icon-person"></span></a></li>
+                  <li id="sign_out_button"><button onclick="signOut()">Sign Out</button></li>
                   <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
                 
                   <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
@@ -298,6 +299,7 @@
   <script src="js/aos.js"></script>
 
   <script src="js/main.js"></script>
+  <script src="js/index.js"></script>
     
   </body>
 </html>
