--- a/DealHack/about.html
+++ b/DealHack/about.html
@@ -259,8 +259,8 @@
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
             <h3 class="footer-heading mb-4">Promo</h3>
-            <a href="#" class="block-6">
-              <img src="images/Phones.jpg" alt="Image placeholder" class="img-fluid rounded mb-4">
+            <a href="shop.html" class="block-6">
+              <img src="images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded mb-4">
               <h3 class="font-weight-light  mb-0">Finding Your Perfect Phone</h3>
             </a>
           </div>
