--- a/DealHack/shop.html
+++ b/DealHack/shop.html
@@ -116,7 +116,7 @@
                 </div>
               </div>
             </div>
-            <div class="row mb-5">
+            <div class="row mb-5 ">
 
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
@@ -289,9 +289,9 @@
             <div class="border p-4 rounded mb-4">
               <h3 class="mb-3 h6 text-uppercase text-black d-block">Categories</h3>
               <ul class="list-unstyled mb-0">
-                <li class="mb-1"><a href="#" class="d-flex"><span>Men</span> <span class="text-black ml-auto">(2,220)</span></a></li>
-                <li class="mb-1"><a href="#" class="d-flex"><span>Women</span> <span class="text-black ml-auto">(2,550)</span></a></li>
-                <li class="mb-1"><a href="#" class="d-flex"><span>Children</span> <span class="text-black ml-auto">(2,124)</span></a></li>
+                <li class="mb-1"><a href="#" class="d-flex"><span>Phones</span> <span class="text-black ml-auto">(2,220)</span></a></li>
+                <li class="mb-1"><a href="#" class="d-flex"><span>Laptops</span> <span class="text-black ml-auto">(2,550)</span></a></li>
+                <li class="mb-1"><a href="#" class="d-flex"><span>TV</span> <span class="text-black ml-auto">(2,124)</span></a></li>
               </ul>
             </div>
 
@@ -314,22 +314,24 @@
                   <input type="checkbox" id="s_lg" class="mr-2 mt-1"> <span class="text-black">Large (1,392)</span>
                 </label>
               </div>
-
+                
               <div class="mb-4">
-                <h3 class="mb-3 h6 text-uppercase text-black d-block">Color</h3>
-                <a href="#" class="d-flex color-item align-items-center" >
-                  <span class="bg-danger color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Red (2,429)</span>
-                </a>
-                <a href="#" class="d-flex color-item align-items-center" >
-                  <span class="bg-success color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Green (2,298)</span>
-                </a>
-                <a href="#" class="d-flex color-item align-items-center" >
-                  <span class="bg-info color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Blue (1,075)</span>
-                </a>
-                <a href="#" class="d-flex color-item align-items-center" >
-                  <span class="bg-primary color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Purple (1,075)</span>
-                </a>
+                <h3 class="mb-3 h6 text-uppercase text-black d-block">Price</h3>
+                <label for="low_price" class="d-flex">
+                  <input type="checkbox" id="low_price" class="mr-2 mt-1"> 
+                  <span class="text-black"> < 10.000.000 đ</span>
+                </label>
+                <label for="medium_price" class="d-flex">
+                  <input type="checkbox" id="medium_price" class="mr-2 mt-1"> <span class="text-black"> 10.000.000đ - 20.000.000đ</span>
+                </label>
+                <label for="high_price" class="d-flex">
+                  <input type="checkbox" id="high_price" class="mr-2 mt-1"> <span class="text-black"> > 20.000.000 đ </span>
+                </label>
+
+
               </div>
+
+             
 
             </div>
           </div>
@@ -372,7 +374,7 @@
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
             <h3 class="footer-heading mb-4">Promo</h3>
-            <a href="#" class="block-6">
+            <a href="shop.html" class="block-6">
               <img src="images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded mb-4">
             </a>
           </div>
